[gd_scene load_steps=8 format=3 uid="uid://cndi0yw5x8ajg"]

[ext_resource type="Texture2D" uid="uid://dariqjm4m24qc" path="res://Assets/sprites2/tilesets/walls/wooden_door_b.png" id="1_213k3"]
[ext_resource type="Script" uid="uid://bdqdyhvsmyvk1" path="res://Scripts/door_component.gd" id="1_qqwrv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_213k3"]
size = Vector2(28, 11)

[sub_resource type="Animation" id="Animation_tfhql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t2uhy"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_qqwrv"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2uhy"]
_data = {
&"RESET": SubResource("Animation_tfhql"),
&"close": SubResource("Animation_t2uhy"),
&"open": SubResource("Animation_qqwrv")
}

[node name="DoorComponent" type="Area2D" node_paths=PackedStringArray("animation")]
z_index = 1
script = ExtResource("1_qqwrv")
teleport_position = Vector2(-2720, 392)
animation = NodePath("AnimationPlayer")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_213k3")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_213k3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t2uhy")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
